force-app/main/default/objects/Opportunity/fields/Account_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Job_Status__c</fullName>
    <label>Account&apos;s Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Accounts_Job_Status</valueSetName>
    </valueSet>
</CustomField>