force-app/main/default/objects/Opportunity/fields/Account_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Opportunity_Type__c</fullName>
    <label>Account Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Opportunity_Type</valueSetName>
    </valueSet>
</CustomField>