force-app/main/default/objects/Opportunity/fields/Approx_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Approx_Start_Date__c</fullName>
    <label>Approx Job Start Date</label>
    <type>Date</type>
</CustomField>