force-app/main/default/objects/Opportunity/fields/Block_Lot__c.field-meta.xml
<CustomField>
    <fullName>Block_Lot__c</fullName>
    <label>Block &amp; Lot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>