force-app/main/default/objects/Opportunity/fields/Confirm_Cross_St__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Cross_St__c</fullName>
    <label>Confirm Cross St</label>
    <length>100</length>
    <type>Text</type>
</CustomField>