force-app/main/default/objects/Opportunity/fields/Contracting_With__c.field-meta.xml
<CustomField>
    <fullName>Contracting_With__c</fullName>
    <label>Contracting With</label>
    <length>250</length>
    <type>Text</type>
</CustomField>