force-app/main/default/objects/Opportunity/fields/ConvertedfromLead__c.field-meta.xml
<CustomField>
    <fullName>ConvertedfromLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted from Lead</label>
    <type>Checkbox</type>
</CustomField>