force-app/main/default/objects/Opportunity/fields/Direct_RFIs_to__c.field-meta.xml
<CustomField>
    <fullName>Direct_RFIs_to__c</fullName>
    <label>Direct RFIs to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>