force-app/main/default/objects/Opportunity/fields/Has_Plans__c.field-meta.xml
<CustomField>
    <fullName>Has_Plans__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If there are no plans, a site meeting needs scheduling</inlineHelpText>
    <label>Has Plans?</label>
    <type>Checkbox</type>
</CustomField>