force-app/main/default/objects/Opportunity/fields/Has_Written_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Has_Written_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Written Line Item?</label>
    <type>Checkbox</type>
</CustomField>