force-app/main/default/objects/Opportunity/fields/Have_Written_Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Have_Written_Scope_of_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Written Scope of Work?</label>
    <type>Checkbox</type>
</CustomField>