force-app/main/default/objects/Opportunity/fields/Initial_Field_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Initial_Field_Meeting__c</fullName>
    <label>Initial Field Meeting</label>
    <type>DateTime</type>
</CustomField>