force-app/main/default/objects/Opportunity/fields/Initial_General_Construction_Description__c.field-meta.xml
<CustomField>
    <fullName>Initial_General_Construction_Description__c</fullName>
    <label>Initial General Construction Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>