force-app/main/default/objects/Opportunity/fields/Initial_General_Sales_Details__c.field-meta.xml
<CustomField>
    <fullName>Initial_General_Sales_Details__c</fullName>
    <label>Initial General Sales Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>