force-app/main/default/objects/Opportunity/fields/job_city__c.field-meta.xml
<CustomField>
    <fullName>job_city__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>