force-app/main/default/objects/Opportunity/fields/job_location__c.field-meta.xml
<CustomField>
    <fullName>job_location__c</fullName>
    <description>Job Site Address/Block &amp; Lot</description>
    <label>Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>