force-app/main/default/objects/Opportunity/fields/job_state__c.field-meta.xml
<CustomField>
    <fullName>job_state__c</fullName>
    <defaultValue>&quot;NJ&quot;</defaultValue>
    <description>2 Letter</description>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>