force-app/main/default/objects/Opportunity/fields/job_zip__c.field-meta.xml
<CustomField>
    <fullName>job_zip__c</fullName>
    <description>&lt;10 chars</description>
    <label>Zip code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>