force-app/main/default/objects/Opportunity/fields/KrowProject__c.field-meta.xml
<CustomField>
    <fullName>KrowProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Krow Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>