force-app/main/default/objects/Opportunity/fields/Landmarks__c.field-meta.xml
<CustomField>
    <fullName>Landmarks__c</fullName>
    <label>Landmarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>