force-app/main/default/objects/Opportunity/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <label>Lead Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>