force-app/main/default/objects/Opportunity/fields/Note_List_Display__c.field-meta.xml
<CustomField>
    <fullName>Note_List_Display__c</fullName>
    <label>Note (List Display)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>