force-app/main/default/objects/Opportunity/fields/OpportunityNamefromLead__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNamefromLead__c</fullName>
    <label>Opportunity Name from Lead</label>
    <length>120</length>
    <type>Text</type>
</CustomField>