force-app/main/default/objects/Opportunity/fields/Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>Quote_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quote Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>