force-app/main/default/objects/Opportunity/fields/SBQQ__Ordered__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal flag that drives automatic order creation.</description>
    <inlineHelpText>Select this checkbox to automatically create an order from the primary quote.</inlineHelpText>
    <label>Ordered</label>
    <type>Checkbox</type>
</CustomField>