force-app/main/default/objects/Opportunity/fields/ScopeofWork__c.field-meta.xml
<CustomField>
    <fullName>ScopeofWork__c</fullName>
    <label>Scope of Work</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>