force-app/main/default/objects/Opportunity/fields/Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel__c</fullName>
    <inlineHelpText>#slack_channel</inlineHelpText>
    <label>Slack Channel</label>
    <length>81</length>
    <type>Text</type>
</CustomField>