force-app/main/default/objects/Opportunity/fields/Slack_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_ID__c</fullName>
    <inlineHelpText>right click on channel name in slack and copy link. Id is string after last /</inlineHelpText>
    <label>Slack Channel ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>