force-app/main/default/objects/Opportunity/fields/SOW_Site_Profile__c.field-meta.xml
<CustomField>
    <fullName>SOW_Site_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOW/Site Profile</label>
    <referenceTo>Site_Profile__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>