force-app/main/default/objects/Opportunity/fields/Thunder_Road_Job_Record__c.field-meta.xml
<CustomField>
    <fullName>Thunder_Road_Job_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be populated on save through Process Builder</description>
    <inlineHelpText>To be populated on save</inlineHelpText>
    <label>Job Record</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>