force-app/main/default/objects/Opportunity/fields/txtAccountForKanban__c.field-meta.xml
<CustomField>
    <fullName>txtAccountForKanban__c</fullName>
    <description>Used for Bolt Kanban</description>
    <formula>Account.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>