force-app/main/default/objects/Opportunity/recordTypes/Estimate_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Estimate_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Setup</businessProcess>
    <label>Estimate Opportunity</label>
</RecordType>