force-app/main/default/objects/Opportunity/validationRules/hashtag_included_in_slack_channel.validationRule-meta.xml
<ValidationRule>
    <fullName>hashtag_included_in_slack_channel</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT( BEGINS( Slack_Channel__c , &quot;#&quot; ) ),
  NOT( ISBLANK( Slack_Channel__c ) )
)</errorConditionFormula>
    <errorDisplayField>Slack_Channel__c</errorDisplayField>
    <errorMessage>Slack Channel must begin with #</errorMessage>
</ValidationRule>