force-app/main/default/objects/Opportunity/validationRules/Must_have_ACCOUNT.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_ACCOUNT</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Account.Id )</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Account Required</errorMessage>
</ValidationRule>