force-app/main/default/objects/Opportunity/listViews/All_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Proposal_Due_Date__c</columns>
    <columns>ScopeofWork__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Lost,Won,Pending Job,Active Job,Final Billing,Completely Finished</value>
    </filters>
    <label>All Opportunities</label>
</ListView>