force-app/main/default/objects/Opportunity/listViews/Completely_Finished_Paid_Jobs.listView-meta.xml
<ListView>
    <fullName>Completely_Finished_Paid_Jobs</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>SBQQ__PrimaryQuote__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>contains</operation>
        <value>Completely Finished</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Estimate_Opportunity</value>
    </filters>
    <label>Completely Finished/Paid Jobs</label>
</ListView>