force-app/main/default/objects/Opportunity/listViews/Final_Billing.listView-meta.xml
<ListView>
    <fullName>Final_Billing</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contracting_With__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>SBQQ__PrimaryQuote__c</columns>
    <columns>KrowProject__c</columns>
    <columns>Link_to_Slack_Channel__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Final Billing</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Estimate_Opportunity</value>
    </filters>
    <label>Final Billing</label>
</ListView>