force-app/main/default/objects/Opportunity/listViews/Incomplete_Jobs.listView-meta.xml
<ListView>
    <fullName>Incomplete_Jobs</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Thunder_Road_Job_Record__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>contains</operation>
        <value>Pending Job,Active Job</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Estimate_Opportunity</value>
    </filters>
    <label>Incomplete Jobs</label>
</ListView>