force-app/main/default/objects/Opportunity/listViews/Jobs_Pending.listView-meta.xml
<ListView>
    <fullName>Jobs_Pending</fullName>
    <columns>Approx_Start_Date__c</columns>
    <columns>Approx_Finish_Date__c</columns>
    <columns>KrowProject__c</columns>
    <columns>Thunder_Road_Job_Record__c</columns>
    <columns>Has_Plans__c</columns>
    <columns>ScopeofWork__c</columns>
    <columns>SBQQ__PrimaryQuote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Pending Job</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Estimate_Opportunity</value>
    </filters>
    <label>Jobs - Pending</label>
</ListView>