force-app/main/default/objects/Opportunity/listViews/Open_Completed_RFPs.listView-meta.xml
<ListView>
    <fullName>Open_Completed_RFPs</fullName>
    <columns>Proposal_Due_Date__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Has_Plans__c</columns>
    <columns>KrowProject__c</columns>
    <columns>Link_to_Slack_Channel__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>SBQQ__PrimaryQuote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Estimate_Opportunity</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>contains</operation>
        <value>Negotiation,Cold Opportunity</value>
    </filters>
    <label>Open Completed RFPs</label>
</ListView>