force-app/main/default/objects/Opportunity/listViews/Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>Open_Opportunities</fullName>
    <columns>Proposal_Due_Date__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notContain</operation>
        <value>Cold Opportunity,Lost,Completely Finished</value>
    </filters>
    <label>Open Opportunities</label>
</ListView>