force-app/main/default/objects/Opportunity/listViews/Open_RFPs.listView-meta.xml
<ListView>
    <fullName>Open_RFPs</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>Has_Plans__c</columns>
    <columns>ScopeofWork__c</columns>
    <columns>SOW_Site_Profile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>contains</operation>
        <value>Setup,Discovery,Takeoff,Create Proposal,Submit Poposal,Negotiation</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Estimate_Opportunity</value>
    </filters>
    <label>Pending RFPs</label>
</ListView>