force-app/main/default/objects/Opportunity/listViews/RFPs_Create_Proposal_Stage.listView-meta.xml
<ListView>
    <fullName>RFPs_Create_Proposal_Stage</fullName>
    <columns>Proposal_Due_Date__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Job_Status__c</columns>
    <columns>Has_Plans__c</columns>
    <columns>Initial_Field_Meeting__c</columns>
    <columns>KrowProject__c</columns>
    <columns>ScopeofWork__c</columns>
    <columns>Link_to_Slack_Channel__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>SBQQ__PrimaryQuote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Create Proposal</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Estimate_Opportunity</value>
    </filters>
    <label>RFPs - Create Proposal Stage</label>
</ListView>