force-app/main/default/objects/Opportunity/listViews/RFPs_in_Discovery_Stage.listView-meta.xml
<ListView>
    <fullName>RFPs_in_Discovery_Stage</fullName>
    <columns>Proposal_Due_Date__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Note_List_Display__c</columns>
    <columns>SOW_Site_Profile__c</columns>
    <columns>Account_Job_Status__c</columns>
    <columns>Contracting_With__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Discovery</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Estimate_Opportunity</value>
    </filters>
    <label>RFPs in Discovery Stage</label>
</ListView>